--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,31 @@
-version: '3.8'
-
+version: "3"
 services:
-  app:
-    image: 'docker-spring-boot-postgres:latest'
-    build:
-      context: .
+  postgres:
+    image: postgres:13
+    network_mode: bridge
+    container_name: postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_USER=docker
+      - POSTGRES_DB=docker
+    restart: unless-stopped
+  # This is my rest api app*****************************************
+  myfirstapp:
+    image: app:0.1
+    network_mode: bridge
     container_name: app
-    depends_on:
-      - db
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/compose-postgres
-      - SPRING_DATASOURCE_USERNAME=compose-postgres
-      - SPRING_DATASOURCE_PASSWORD=compose-postgres
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-
-  db:
-    image: 'postgres:13'
-    container_name: db
-    environment:
-      - POSTGRES_USER=compose-postgres
-      - POSTGRES_PASSWORD=compose-postgres
+    expose:
+      - 8080
+    ports:
+      - 8081:8080
+    volumes:
+      - /home/pramod/Desktop:/var/tmp
+    restart: unless-stopped
+volumes:
+  postgres-data:
