--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>app</name>
 	<description>BookManagerSpringBoot</description>
-	<properties>
-		<java.version>15</java.version>
-	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,6 +60,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.4.1</version>
 				<configuration>
 					<excludes>
 						<exclude>
