--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,21 +11,23 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_USER=docker
-      - POSTGRES_DB=docker
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=book
     restart: unless-stopped
-  # This is my rest api app*****************************************
-  myfirstapp:
-    image: app:0.1
+
+  springbootapp:
+    image: my-java-app:latest
     network_mode: bridge
-    container_name: app
+    container_name: springbootapp
     expose:
       - 8080
     ports:
-      - 8081:8080
-    volumes:
-      - /home/pramod/Desktop:/var/tmp
+      - 8080:8080
     restart: unless-stopped
+    depends_on:
+      - postgres
+    links:
+      - postgres
 volumes:
   postgres-data:
